# exerionbit-esp32c3-bootloader

./: .gitignore  BOOT_SEQUENCE.md  CMakeLists.txt  README.md  SECURITY.md  SETUP.md  VALIDATION_PROFILE.md  build_manual_output.txt  partitions.csv  sdkconfig.defaults  settings.json
.github/workflows/: ci-build.yml
app_test/: Kconfig.projbuild
bootloader_components/: CMakeLists.txt
bootloader_components/boot_core/: CMakeLists.txt  idf_component.yml  logging.c  main.c
bootloader_components/main/: CMakeLists.txt  Kconfig.projbuild  boot_config.h  logging.c  logging.h  main.c  update_mode.c  update_mode.h  ws2812.c  ws2812.h
docs/: KNOWN_LIMITS.md
docs/evidence/: HARDWARE_VALIDATION_CHECKLIST.md  TEMPLATE_expected-vs-observed.md
docs/evidence/v0.1/: expected-vs-observed.md
docs/evidence/v0.2/: compliance-baseline.md  expected-vs-observed.md  size_report.txt
docs/media/v0.2/: README.md
main/: main.c
scripts/: append_crc.py  send_update.py  send_update_negative.py  validate_bootlog.py  validate_evidence_contract.py  watch_serial.py
